--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -19,7 +19,8 @@
         {
             <tr>
                 <td>
-                    <a href=/Customers/Details/@customer.Id>@customer.Name</a>	
+                    @Html.ActionLink(customer.Name,"Edit","Customers", new { id = customer.Id }, null)
+                    @*<a href="/Customers/Edit/@customer.Id">@customer.Name</a>*@
                 </td>
                 <td>@customer.MembershipType.Name</td>
                 <td>@customer.MembershipType.DiscountRate%</td>
