--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -6,26 +6,27 @@
 
     <h2>Index</h2>
 
-    <table class="table table-striped table-hover ">
-        <thead>
-            <tr>
-                <th>Customer</th>
-                <th>Membership Type</th>
-                <th>Discount Rate</th>
-            </tr>
-        </thead>
-        <tbody>
-        @foreach (var customer in Model.ToList())
-        {
-            <tr>
-                <td>
-                    @Html.ActionLink(customer.Name,"Edit","Customers", new { id = customer.Id }, null)
-                    @*<a href="/Customers/Edit/@customer.Id">@customer.Name</a>*@
-                </td>
-                <td>@customer.MembershipType.Name</td>
-                <td>@customer.MembershipType.DiscountRate%</td>
-                <
-            </tr>
-        }
-        </tbody>
-    </table>
+<table class="table table-striped table-hover ">
+    <thead>
+    <tr>
+        <th>Customer</th>
+        <th>Membership Type</th>
+        <th>Discount Rate</th>
+    </tr>
+    </thead>
+    <tbody>
+    @foreach (var customer in Model.ToList())
+    {
+        <tr>
+            <td>
+                @Html.ActionLink(customer.Name,"Edit","Customers", new { id = customer.Id }, null)
+                @*<a href="/Customers/Edit/@customer.Id">@customer.Name</a>*@
+            </td>
+            <td>@customer.MembershipType.Name</td>
+            <td>@customer.MembershipType.DiscountRate%</td>
+            <
+        </tr>
+    }
+    </tbody>
+</table>
+<a href="/Customers/New" class="btn btn-primary">New Customer</a>
